--- a/nodejs-express-mysql/web/package.json
+++ b/nodejs-express-mysql/web/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "iview": "^2.14.0-rc.1",
+    "qs": "^6.5.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
